[package]
name = "comm-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.11.0", default-features = false, features = ["rtu", "tcp"] }
tokio-serial = "5.4.1"